@@ -8,15 +8,25 @@ Gem.manage_gems
 class TestGemLoadPaths < Test::Unit::TestCase
   include Gem::DefaultUserInteraction
 
-  def test_something
+  def setup
     create_gemhome
     Gem.clear_paths
     Gem.use_paths("test/data/gemhome")
+  end
+
+  def test_all_load_paths
     assert_equal [
       "test/data/gemhome/gems/a-0.0.1/lib",
       "test/data/gemhome/gems/a-0.0.2/lib",
       "test/data/gemhome/gems/b-0.0.2/lib"].sort,
       Gem.all_load_paths.sort
+  end
+
+  def test_latest_load_paths
+    assert_equal [
+      "test/data/gemhome/gems/a-0.0.2/lib",
+      "test/data/gemhome/gems/b-0.0.2/lib"].sort,
+      Gem.latest_load_paths.sort
   end
 
   def create_gemhome
